--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ openai = "^0.27.8"
 python-dotenv = "^1.0.0"
 fastapi = "^0.100.1"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
+langchain = "^0.0.278"
 
 
 
