--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,17 @@ pandas = "^2.0.2"
 scikit-learn = "^1.2.2"
 openai = "^0.27.8"
 python-dotenv = "^1.0.0"
-fastapi = "^0.100.1"
+fastapi = "0.99.1"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
 langchain = "^0.0.278"
+tiktoken = "^0.4.0"
+faiss-cpu = "^1.7.4"
+chromadb = "^0.4.8"
+ragas = "^0.0.11"
+pypdf2 = "^3.0.1"
+pypdf = "^3.15.4"
+pdfminer-six = "^20221105"
+python-multipart = "^0.0.6"
 
 
 
